[tool.poetry]
name = "geo-api"
version = "0.1.0"
description = ""
authors = ["Daniel Torres <torresestradadaniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"
geolib = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
